cmake_minimum_required(VERSION 3.22)
project(CSCI262)

set(CMAKE_CXX_STANDARD 23)

add_executable(CSCI262 main.cpp "Assignment 0 - Objects and Classes/main.cpp" "Assignment 0 - Objects and Classes/main.h" "Assignment 0 - Objects and Classes/clock_time.cpp" "Assignment 0 - Objects and Classes/clock_time.h")
